unpackaged/main/default/objects/Enrollment_Form__c/Enrollment_Form__c.object-meta.xml
<CustomObject>
    <label>Enrollment Form</label>
    <nameField>
        <label>Enrollment Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>