unpackaged/main/default/objects/Enrollment_Form__c/fields/Additional_Information_Allergies__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Allergies__c</fullName>
    <label>Additional Information (Allergies)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>