unpackaged/main/default/objects/Enrollment_Form__c/fields/Additional_Information_Dietary__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Dietary__c</fullName>
    <label>Additional Information (Dietary)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>