unpackaged/main/default/objects/Enrollment_Form__c/fields/Completed_FAFSA__c.field-meta.xml
<CustomField>
    <fullName>Completed_FAFSA__c</fullName>
    <label>Completed FAFSA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>