unpackaged/main/default/objects/Enrollment_Form__c/fields/Concerns__c.field-meta.xml
<CustomField>
    <fullName>Concerns__c</fullName>
    <label>Concerns</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>