unpackaged/main/default/objects/Enrollment_Form__c/fields/Dietary_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restriction__c</fullName>
    <label>Dietary Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>