unpackaged/main/default/objects/Enrollment_Form__c/fields/Hospitalization__c.field-meta.xml
<CustomField>
    <fullName>Hospitalization__c</fullName>
    <label>Hospitalization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>