unpackaged/main/default/objects/Enrollment_Form__c/fields/Number_of_Verto_Semesters__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Verto_Semesters__c</fullName>
    <label>Number of Verto Semesters</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Semester</fullName>
            </value>
            <value>
                <fullName>2 Semesters</fullName>
            </value>
            <value>
                <fullName>Not sure yet.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>