unpackaged/main/default/objects/Enrollment_Form__c/fields/Other_T_Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>Other_T_Shirt_Size__c</fullName>
    <label>Other T-Shirt Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>