unpackaged/main/default/objects/Enrollment_Form__c/fields/Outside_Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Outside_Scholarship__c</fullName>
    <label>Outside Scholarship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>