unpackaged/main/default/objects/Enrollment_Form__c/fields/Preferred_Name_or_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name_or_Nickname__c</fullName>
    <label>Preferred Name or Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>