unpackaged/main/default/objects/Enrollment_Form__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Enrollment Forms</relationshipLabel>
    <relationshipName>Enrollment_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>