unpackaged/main/default/objects/Enrollment_Form__c/fields/Student_s_Account__c.field-meta.xml
<CustomField>
    <fullName>Student_s_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student&#39;s Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrollment Forms</relationshipLabel>
    <relationshipName>Enrollment_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>