unpackaged/main/default/objects/Enrollment_Form__c/recordTypes/Additional_Semester.recordType-meta.xml
<RecordType>
    <fullName>Additional_Semester</fullName>
    <active>true</active>
    <label>Additional Semester</label>
</RecordType>