unpackaged/main/default/objects/Enrollment_Form__c/recordTypes/First_Semester.recordType-meta.xml
<RecordType>
    <fullName>First_Semester</fullName>
    <active>true</active>
    <label>First Semester</label>
</RecordType>